[project]
name = "rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "motor>=3.7.1",
    "pymongo>=4.17.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]
