[project]
name = "rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu==1.8.0",
    "fastapi==0.115.0",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-core==0.2.38",
    "langchain-openai==0.1.23",
    "motor==3.5.1",
    "numpy==1.26.4",
    "pillow>=12.2.0",
    "pymongo==4.8.0",
    "pymupdf==1.24.9",
    "pypdf==4.3.1",
    "pytesseract>=0.3.13",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "rank-bm25==0.2.2",
    "redis==5.0.8",
    "uvicorn[standard]==0.30.6",
]
