[project]
name = "ragapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.74",
    "langchain-openai==0.3.31",
    "langgraph==0.6.6",
    "openai==1.102.0",
    "psycopg2-binary>=2.9.12",
    "pydantic==2.11.7",
    "pypdf==6.0.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "qdrant-client==1.15.1",
    "requests>=2.34.2",
    "rich==14.1.0",
    "sentence-transformers==5.1.0",
    "sqlalchemy>=2.0.49",
    "tiktoken==0.11.0",
    "unstructured==0.18.14",
    "uvicorn[standard]==0.35.0",
]
